--- a/app/src/app/components/header/header.component.html
+++ b/app/src/app/components/header/header.component.html
@@ -10,10 +10,7 @@
                 <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
             <li class="nav-item" *ngIf="showAdminBoard">
-                <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin Board</a>
-            </li>
-            <li class="nav-item" *ngIf="showModeratorBoard">
-                <a class="nav-link" routerLink="/mod" routerLinkActive="active">Moderator Board</a>
+                <a class="nav-link" routerLink="/admin/blogs" routerLinkActive="active">Admin Board</a>
             </li>
             <li class="nav-item" *ngIf="isLoggedIn">
                 <a class="nav-link" routerLink="/user" routerLinkActive="active">User</a>
