Admin side blog comment features arranged.

--- a/app/src/app/components/admin/admin-blog-create/admin-blog-create.component.html
+++ b/app/src/app/components/admin/admin-blog-create/admin-blog-create.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <button routerLink="/admin/blogs" class="btn btn-secondary">Back</button>
-    <h2>Create Blog</h2>
+    <button routerLink="/admin/comments" class="btn btn-secondary">Back</button>
+    <h2>Send a Comment</h2>
     <form [formGroup]="blogForm" (ngSubmit)="createBlog()">
         <div class="form-group">
             <label>Title</label>
