--- a/app/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/app/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -1,10 +1,18 @@
 <mat-nav-list>
-    <mat-list-item routerLink="/admin/blogs">
+    <mat-list-item routerLink="/admin/comments">
         <mat-icon>article</mat-icon>
-        <span class="menu-item">Blog Posts</span>
+        <span class="menu-item">Comments</span>
     </mat-list-item>
-    <mat-list-item routerLink="/admin/contact-us">
+    <mat-list-item routerLink="/admin/contact-forms">
         <mat-icon>contact_mail</mat-icon>
         <span class="menu-item">Contact Forms</span>
+    </mat-list-item>
+    <mat-list-item routerLink="/admin/create-blog">
+        <mat-icon>post_add</mat-icon>
+        <span class="menu-item">Create Blog</span>
+    </mat-list-item>
+    <mat-list-item routerLink="/admin/blogs">
+        <mat-icon>list</mat-icon>
+        <span class="menu-item">Manage Blogs</span>
     </mat-list-item>
 </mat-nav-list>
