--- a/app/src/app/components/blog/blog-create/blog-create.component.html
+++ b/app/src/app/components/blog/blog-create/blog-create.component.html
@@ -1,16 +1,18 @@
 <div class="container">
-    <h2>Blog Oluştur</h2>
+    <button routerLink="/blogs" class="btn btn-secondary">Back</button>
+
+    <h2>Send a Comment</h2>
     <form (ngSubmit)="createBlog()">
         <div class="form-group">
-            <label for="title">Başlık</label>
+            <label for="title">Title</label>
             <input type="text" id="title" [(ngModel)]="blog.title" name="title" required class="form-control">
         </div>
 
         <div class="form-group">
-            <label for="content">İçerik</label>
+            <label for="content">Content</label>
             <st-editor [(ngModel)]="blog.content" [config]="config"></st-editor>
         </div>
 
-        <button type="submit" class="btn btn-primary">Oluştur</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
 </div>
