--- a/app/src/app/components/blog/blog-detail/blog-detail.component.html
+++ b/app/src/app/components/blog/blog-detail/blog-detail.component.html
@@ -1,11 +1,11 @@
 <div class="container" *ngIf="blog">
-    <button routerLink="/blogs" class="btn btn-secondary">Geri Dön</button>
+    <button routerLink="/comments" class="btn btn-secondary">Geri Dön</button>
 
     <div class="row" style="display: flex; justify-content: center; align-content: center">
         <img *ngIf="userAvatar" [src]="userAvatar" alt="{{ blog.authorName }}'in avatarı" class="avatar">
-        <h2>{{ blog.title }}</h2></div>
-    <p class="blog-meta">Yazar: {{ blog.authorName }} | Tarih: {{ blog.createdAt | date }}</p>
-    <div class="blog-content">
-        <p>{{ blog.content }}</p>
+        <h2>{{ blog.title }}</h2>
+    </div>
+    <p class="blog-meta">Author: {{ blog.authorName }} | Date: {{ blog.createdAt | date }}</p>
+    <div class="blog-content" [innerHTML]="blog.content">
     </div>
 </div>
