added links to buttons

--- a/app/src/app/components/home/home.component.html
+++ b/app/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="col-4 justify-content-center align-content-center text-center mt-5">
             <h1>Daily, monthly, and self-care routines</h1>
             <p>NLP powered and ML powered with continual improvement, enjoy self-renewing.</p>
-            <button class="btn btn-primary mb-4 glowup-path-btn">USE GLOWUP</button>
+            <button class="btn btn-primary mb-4 glowup-path-btn" routerLink="/chat-box" >USE GLOWUP</button>
             <div class="row">
                 <div class="col-4">
                     <div class="icon-container justify-content-center align-content-center">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="d-flex justify-content-center mt-3">
-                <button class="btn btn-primary mb-4 glowup-path-btn">CLICK HERE!</button>
+                <button class="btn btn-primary mb-4 glowup-path-btn" routerLink="/capture">CLICK HERE!</button>
             </div>
 
         </div>
@@ -110,7 +110,6 @@
         </div>
     </div>
 
-<!--    BURASI AYRI COMPONENT OLARAK YAPILCAK-->
 <app-product-slider></app-product-slider>
 
 
